--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,13 +17,8 @@
 }
 
 body {
-	color: rgb(var(--foreground-rgb));
-	background: linear-gradient(
-			to bottom,
-			transparent,
-			rgb(var(--background-end-rgb))
-		)
-		rgb(var(--background-start-rgb));
+	color: black;
+	background: #d2a772;
 }
 
 @layer utilities {
