--- a/src/pages/global.css
+++ b/src/pages/global.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
+
 :root {
 	--foreground-rgb: 0, 0, 0;
 	--background-start-rgb: 214, 219, 220;
@@ -35,6 +37,7 @@ ul {
 body {
 	color: black;
 	background: #d2a772;
+	font-family: 'Poppins', sans-serif;
 }
 
 .gradient-top {
